--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "homepage": "http://xraquel.github.io/react-setup",
-  "name": "react-parcel-setup",
+  "name": "simpliclaim-react",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.5"
   },
   "scripts": {
@@ -26,6 +27,10 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "gh-pages": "^2.0.1"
+    "gh-pages": "^2.0.1",
+    "node-sass": "^4.11.0",
+    "postcss-cssnext": "^3.1.0",
+    "postcss-loader": "^2.1.1",
+    "react-hot-loader": "^4.6.5"
   }
 }
